[package]
name = "savan"
version = "0.1.0"
edition = "2021"
authors = ["drwadu"]
description = "core library for answer set navigation."
repository = "https://github.com/drwadu/savan"
keywords = ["logic programming", "answer set programming", "answer set navigation"]
license = "MIT"

[lib]
name = "savan"
path = "src/lib.rs"
test = true
edition = "2021"       
crate-type = ["lib"]   

[dependencies]
clingo = { version = "0.7.2", features = ["static-linking"] }
thiserror = "1.0"
